Here we list changes of Ipopt since the release of version 3.0.0.
More detailed information about incremental changes can be found in the
commit history.

2020-xx-yy: 3.13.1
        - Added asserts that check whether sparsity pattern of Jacobian
          and Hessian as returned by TNLP are within range w.r.t. number
          of variables and constraints.

2019-10-19: 3.13.0
        This major release comes with a larger renovation of the build
        system and a changed directory structure (eliminated top directory),
        which is the result of a long and still on-going effort to use
        recent autotools versions for various COIN-OR projects, reduce
        future maintenance efforts, and adapting behaviors of standard
        autotools-based projects.
        As a consequence, a monolithic build of Ipopt, which builds Ipopt
        with all its dependencies in one run of configure and make is no
        longer possible. Dependencies should now be build and installed
        before building Ipopt.
        Additionally, support for some outdated versions of dependencies
        and unmaintained components of Ipopt have been dropped and some
        improvements that may require changes on the users side have been
        applied.
        A more detailed, probably incomplete, list of changes follows:
        - Removed git submodules. Dependencies (HSL, Mumps, ASL, etc) now
          need to be build and installed in advance, either manually or
          by using coinbrew.
        - Dropped support for HSL < 2013.
        - Dropped support for MA28 in the linear solver loader.
        - Dropped support for Pardiso < 4.0 from pardiso-project.org.
        - Added support for Mumps 5.2.x, though initial experiments on
          CUTEst indicated that, on average, performance is worse than
          when using Mumps 4.10.0.
        - Dropped CUTEr interface, the successor CUTEst includes an
          interface to Ipopt.