@@ -5,7 +5,10 @@ commit history.
 2020-xx-yy: 3.13.1
         - Added asserts that check whether sparsity pattern of Jacobian
           and Hessian as returned by TNLP are within range w.r.t. number
-          of variables and constraints.
+          of variables and constraints. [#350]
+        - TNLPAdapter::ResortBnds now initialized complete output arrays
+          with 0.0 before filling in values for non-fixed variables. Use
+          new argument clearorig to turn this off. [#352]
 
 2019-10-19: 3.13.0
         This major release comes with a larger renovation of the build
